--- a/platforms/browser/platform_www/manifest.json
+++ b/platforms/browser/platform_www/manifest.json
@@ -11,7 +11,7 @@
       "type": "image/png"
     },
     {
-      "src": "img/splash.png",
+      "src": "img/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
